[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.sql"
description = "A Dissect module implementing a parsers for the SQLite database file format, commonly used by applications to store configuration data"
readme = "README.md"
requires-python = "~=3.9"
license.text = "Affero General Public License v3"
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
    "dissect.cstruct>=3.0.dev,<4.0.dev",
    "dissect.util>=3.0.dev,<4.0.dev",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.sql"
repository = "https://github.com/fox-it/dissect.sql"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["dissect.sql"]
known_third_party = ["dissect"]

[tool.setuptools]
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
