[build-system]
requires = ["setuptools>=77.0.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.sql"
description = "A Dissect module implementing a parsers for the SQLite database file format, commonly used by applications to store configuration data"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=4,<5",
    "dissect.util>=3,<4",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.sql"
repository = "https://github.com/fox-it/dissect.sql"

[project.optional-dependencies]
dev = [
    "dissect.cstruct>=4.0.dev,<5.0.dev",
    "dissect.util>=3.0.dev,<4.0.dev",
]

[tool.ruff]
line-length = 120
required-version = ">=0.9.0"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "ANN",
  "B",
  "C4",
  "DTZ",
  "T10",
  "FA",
  "ISC",
  "G",
  "INP",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "PTH",
  "PLC",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "RUF",
]
ignore = ["E203", "B904", "UP024", "ANN002", "ANN003", "ANN204", "ANN401", "SIM105", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/docs/**" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["dissect.sql"]
known-third-party = ["dissect"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
