[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.sql
license = Affero General Public License v3
description = A Dissect module implementing a parsers for the SQLite database file format, commonly used by applications to store configuration data
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3
